# hs-tax-ato

./: .hlint.yaml  .travis.yml  CHANGELOG.md  tax-ato.cabal
.github/workflows/: haskell-ci.yml
src/Data/Tax/: ATO.hs
src/Data/Tax/ATO/: ABN.hs  BPI.hs  CGT.hs  Common.hs  Days.hs  Depreciation.hs  FY.hs  PaymentSummary.hs  Pretty.hs  PrivateHealthInsuranceRebate.hs  Rounding.hs  TFN.hs
src/Data/Tax/ATO/FY/: FY2017.hs  FY2018.hs  FY2019.hs  FY2020.hs  FY2021.hs  FY2022.hs  FY2023.hs  FY2024.hs  FY2025.hs  FY2026.hs  FY2027.hs
