name:                tax-ato
version:             0.1.0.0
synopsis:            Tax types and computations for Australia
description:
  This library provides types and tax computations for tax
  in Australia (ATO = /Australian Taxation Office/).  It is
  based on the <https://hackage.haskell.org/package/tax tax>
  library.
license:             AGPL-3
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
-- copyright:
category:            Finance
build-type:          Simple
cabal-version:       >=1.10

homepage:            https://github.com/frasertweedale/hs-tax-ato
bug-reports:         https://github.com/frasertweedale/hs-tax-ato/issues
source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-tax-ato.git

library
  exposed-modules:
    Data.Tax.ATO
    Data.Tax.ATO.CGT
    Data.Tax.ATO.Common
    Data.Tax.ATO.FY.FY2017
    Data.Tax.ATO.FY.FY2018
    Data.Tax.ATO.FY.FY2019
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >= 4.8 && < 5
    , lens >= 4.12
    , semigroups >= 0.16
    , time >= 1.5
    , tax >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8)
    ghc-options: -Wredundant-constraints
