cabal-version:       2.2
name:                tax-ato
version:             2024.1.0.1
synopsis:            Tax types and computations for Australia
description:
  This library provides types and tax computations for tax
  in Australia (ATO = /Australian Taxation Office/).  It is
  based on the <https://hackage.haskell.org/package/tax tax>
  library.
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2018-2023 Fraser Tweedale
category:            Finance
build-type:          Simple
tested-with:         GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2
extra-source-files:
  .hlint.yaml
extra-doc-files:
  CHANGELOG.md

homepage:            https://github.com/frasertweedale/hs-tax-ato
bug-reports:         https://github.com/frasertweedale/hs-tax-ato/issues
source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-tax-ato.git

common common
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Werror=missing-methods
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -fhide-source-paths
    -Winvalid-haddock
    -Werror=unicode-bidirectional-format-characters
    -Wimplicit-lift
    -Woperator-whitespace
    -Wredundant-bang-patterns
    -Wredundant-strictness-flags
  build-depends:
    base >= 4.14 && < 5

library
  import: common
  hs-source-dirs:      src
  exposed-modules:
    Data.Tax.ATO
    Data.Tax.ATO.ABN
    Data.Tax.ATO.TFN
    Data.Tax.ATO.CGT
    Data.Tax.ATO.Common
    Data.Tax.ATO.Depreciation
    Data.Tax.ATO.PaymentSummary
    Data.Tax.ATO.Pretty
    Data.Tax.ATO.PrivateHealthInsuranceRebate
    Data.Tax.ATO.Rounding
    Data.Tax.ATO.FY
    Data.Tax.ATO.FY.FY2017
    Data.Tax.ATO.FY.FY2018
    Data.Tax.ATO.FY.FY2019
    Data.Tax.ATO.FY.FY2020
    Data.Tax.ATO.FY.FY2021
    Data.Tax.ATO.FY.FY2022
    Data.Tax.ATO.FY.FY2023
    Data.Tax.ATO.FY.FY2024
    Data.Tax.ATO.FY.FY2025
  build-depends:
    , lens >= 4.18 && < 6
    , time >= 1.11 && < 1.15
    , tax >= 0.2 && < 0.3
    , pretty >= 1.1.3.6 && < 2
